--- a/packages/taro-select/package.json
+++ b/packages/taro-select/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "@jswork/taro-picker",
+  "name": "@jswork/taro-select",
   "version": "1.0.0",
-  "description": "Taro picker.",
+  "description": "Taro select.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "scripts": {
+    "dev": "tsc -w",
     "build": "tsc"
   },
   "author": "afeiship",
@@ -12,6 +13,7 @@
   "devDependencies": {
     "@types/react": "^17.0.8",
     "@types/react-dom": "^17.0.5",
+    "prettier": "^2.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "typescript": "^4.3.2"
@@ -19,5 +21,8 @@
   "peerDependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "dependencies": {
+    "@jswork/noop": "^1.0.0"
   }
 }
