--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
   "scripts": {
     "start": "cd ./packages/sites && yarn start",
     "build": "lerna run build --since master",
-    "publish": "npm run build && lerna publish --no-private publish from-git"
+    "publish": "npm run build && lerna publish --no-private"
   }
 }
