--- a/packages/taro-select/package.json
+++ b/packages/taro-select/package.json
@@ -24,5 +24,9 @@
   },
   "dependencies": {
     "@jswork/noop": "^1.0.0"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   }
 }
