--- a/lerna.json
+++ b/lerna.json
@@ -14,7 +14,7 @@
   ],
   "command": {
     "publish": {
-      "message": "chore(release): publish",
+      "message": "chore(release): publish %s",
       "registry": "https://registry.npmjs.org"
     }
   }
