feat: canvas broken

--- a/packages/sites/project.config.json
+++ b/packages/sites/project.config.json
@@ -37,7 +37,7 @@
     "userConfirmedBundleSwitch": false,
     "packNpmManually": false,
     "packNpmRelationList": [],
-    "minifyWXSS": true
+    "minifyWXSS": false
   },
   "compileType": "miniprogram",
   "condition": {}
