--- a/packages/taro-echarts/tsconfig.json
+++ b/packages/taro-echarts/tsconfig.json
@@ -11,6 +11,7 @@
     ],
     "jsx": "react",
     "declaration": true,
+    "allowJs": true,
     "moduleResolution": "node",
     "noUnusedLocals": true,
     "noUnusedParameters": true,
