--- a/packages/taro-echarts/package.json
+++ b/packages/taro-echarts/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^17.0.2"
   },
   "dependencies": {
+    "@jswork/echarts-tinny": "^1.0.0",
     "@jswork/noop": "^1.0.0",
     "echarts": "^5.1.1"
   },
