--- a/packages/sites/package.json
+++ b/packages/sites/package.json
@@ -41,7 +41,8 @@
     "@tarojs/taro": "3.2.1",
     "@tarojs/react": "3.2.1",
     "react-dom": "^17.0.0",
-    "react": "^17.0.0"
+    "react": "^17.0.0",
+    "@jswork/echarts-tiny": "^1.0.2"
   },
   "devDependencies": {
     "@types/webpack-env": "^1.13.6",
