--- a/packages/taro-echarts/package.json
+++ b/packages/taro-echarts/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^17.0.2"
   },
   "dependencies": {
-    "@jswork/noop": "^1.0.0"
+    "@jswork/noop": "^1.0.0",
+    "@tarojs/taro": "^3.2.10"
   },
   "publishConfig": {
     "access": "public",
