--- a/packages/taro-echarts/package.json
+++ b/packages/taro-echarts/package.json
@@ -11,7 +11,6 @@
   "author": "afeiship",
   "license": "MIT",
   "devDependencies": {
-    "@types/echarts": "^4.9.7",
     "@types/react": "^17.0.8",
     "@types/react-dom": "^17.0.5",
     "prettier": "^2.3.0",
@@ -24,8 +23,7 @@
     "react-dom": "^17.0.2"
   },
   "dependencies": {
-    "@jswork/noop": "^1.0.0",
-    "@tarojs/taro": "^3.2.10"
+    "@jswork/noop": "^1.0.0"
   },
   "publishConfig": {
     "access": "public",
