--- a/packages/sites/package.json
+++ b/packages/sites/package.json
@@ -36,29 +36,40 @@
   "author": "",
   "dependencies": {
     "@babel/runtime": "^7.7.7",
+    "@jswork/echarts-tiny": "^1.0.2",
+    "@jswork/styled-box": "^1.0.6",
+    "@linaria/babel-preset": "^3.0.0-beta.4",
+    "@linaria/core": "^3.0.0-beta.4",
+    "@linaria/react": "^3.0.0-beta.4",
+    "@linaria/shaker": "^3.0.0-beta.4",
     "@tarojs/components": "3.2.1",
+    "@tarojs/react": "3.2.1",
     "@tarojs/runtime": "3.2.1",
     "@tarojs/taro": "3.2.1",
-    "@tarojs/react": "3.2.1",
-    "react-dom": "^17.0.0",
+    "css-styled": "^1.0.0",
+    "linaria": "^2.1.0",
     "react": "^17.0.0",
-    "@jswork/echarts-tiny": "^1.0.2"
+    "react-dom": "^17.0.0",
+    "tslib": "^2.2.0"
   },
   "devDependencies": {
-    "@types/webpack-env": "^1.13.6",
-    "@types/react": "^17.0.2",
-    "@tarojs/mini-runner": "3.2.1",
     "@babel/core": "^7.8.0",
+    "@tarojs/mini-runner": "3.2.1",
     "@tarojs/webpack-runner": "3.2.1",
+    "@types/react": "^17.0.2",
+    "@types/webpack-env": "^1.13.6",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
     "babel-preset-taro": "3.2.1",
-    "eslint-config-taro": "3.2.1",
     "eslint": "^6.8.0",
-    "eslint-plugin-react": "^7.8.2",
+    "eslint-config-taro": "3.2.1",
     "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "stylelint": "9.3.0",
-    "@typescript-eslint/parser": "^4.15.1",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
     "typescript": "^4.1.0"
+  },
+  "resolutions": {
+    "tslib": "2.2.0"
   }
 }
