fix: taro select

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lerna": "^3.22.1"
   },
   "scripts": {
+    "bootstrap": "lerna bootstrap",
+    "clean": "lerna clean",
     "start": "cd ./packages/sites && yarn start",
     "build": "lerna run build --since master",
     "publish": "npm run build && lerna publish --no-private"
