--- a/packages/sites/tsconfig.json
+++ b/packages/sites/tsconfig.json
@@ -18,6 +18,7 @@
     "jsx": "react-jsx",
     "allowJs": true,
     "resolveJsonModule": true,
+    "importHelpers": true,
     "typeRoots": [
       "node_modules/@types",
       "global.d.ts"
