--- a/packages/sites/package.json
+++ b/packages/sites/package.json
@@ -46,6 +46,7 @@
     "@tarojs/react": "3.2.1",
     "@tarojs/runtime": "3.2.1",
     "@tarojs/taro": "3.2.1",
+    "@jswork/taro-select":"^1.0.2",
     "css-styled": "^1.0.0",
     "linaria": "^2.1.0",
     "react": "^17.0.0",
@@ -68,8 +69,5 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "stylelint": "9.3.0",
     "typescript": "^4.1.0"
-  },
-  "resolutions": {
-    "tslib": "2.2.0"
   }
 }
