--- a/packages/taro-echarts/tsconfig.json
+++ b/packages/taro-echarts/tsconfig.json
@@ -21,7 +21,8 @@
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
     "allowSyntheticDefaultImports": true,
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "importHelpers": true
   },
   "include": [
     "src"
