--- a/packages/websites/package.json
+++ b/packages/websites/package.json
@@ -38,6 +38,7 @@
     "@babel/runtime": "^7.7.7",
     "@jswork/echarts-tiny": "^1.0.2",
     "@jswork/styled-box": "^1.0.6",
+    "@jswork/taro-select": "^1.0.2",
     "@linaria/babel-preset": "^3.0.0-beta.4",
     "@linaria/core": "^3.0.0-beta.4",
     "@linaria/react": "^3.0.0-beta.4",
@@ -46,11 +47,11 @@
     "@tarojs/react": "3.2.1",
     "@tarojs/runtime": "3.2.1",
     "@tarojs/taro": "3.2.1",
-    "@jswork/taro-select":"^1.0.2",
     "css-styled": "^1.0.0",
     "linaria": "^2.1.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "taro-ui": "^3.0.0-alpha.10",
     "tslib": "^2.2.0"
   },
   "devDependencies": {
