--- a/packages/websites/package.json
+++ b/packages/websites/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sites",
+  "name": "websites",
   "version": "1.0.0",
   "private": true,
   "description": "Taro components demo site.",
