feat: add multiple action for template

--- a/packages/taro-data-list/package.json
+++ b/packages/taro-data-list/package.json
@@ -23,7 +23,9 @@
     "react-dom": "^17.0.2"
   },
   "dependencies": {
-    "@jswork/noop": "^1.0.0"
+    "@jswork/noop": "^1.0.0",
+    "@jswork/react-condition-manager": "^1.0.0",
+    "@jswork/react-list": "^1.0.1"
   },
   "publishConfig": {
     "access": "public",
