--- a/packages/websites/package.json
+++ b/packages/websites/package.json
@@ -69,6 +69,7 @@
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "stylelint": "9.3.0",
+    "tslib": "2",
     "typescript": "^4.1.0"
   }
 }
